# picoctf-report

./: INDEX.md  README.md
tool-research/Hunter_2/: DECISIONS.md  HunterGUI.spec  INSTALL.md  NEXT.md  README.md  RELEASE_NOTES.md  WORKLOG.md  demo.sh  gui.py  hunter2_structure.txt  pyproject.toml  report.html  report.json  report.md  suppressions.json
tool-research/Hunter_2/config/: __init__.py  config.py  defaults.py  samples.yaml  validation.py  yaml_config.py
tool-research/Hunter_2/core/: __init__.py  artifact_manager.py  http_client.py  limiter.py  models.py  schema_validator.py  scope.py  secrets.py  session.py  utils.py
tool-research/Hunter_2/docs/: ARTIFACT_SCHEMA.md  FINDING_LIFECYCLE.md  FINDING_SCHEMA.md  GOLDEN_REPORT_SAMPLE.md  POLICY_MATRIX.md  README.md  SUPPRESSION_SCHEMA.md
tool-research/Hunter_2/enumeration/: __init__.py  crawler.py  discovery.py  enumerator.py  seeds.py
tool-research/Hunter_2/fingerprint/: __init__.py  fingerprint.py  loader.py
tool-research/Hunter_2/fingerprints/: tech.yaml  waf.yaml
tool-research/Hunter_2/hunter/: __init__.py  cli.py
tool-research/Hunter_2/hunter_2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tool-research/Hunter_2/payloads/: lfi.txt  sqli.txt  ssrf.txt  xss.txt
tool-research/Hunter_2/postprocess/: __init__.py  artifact_analyzer.py  baseline.py  correlation.py  ctf.py  dedupe.py  exploitability.py  metrics.py  normalize.py  planner.py  recover_pro_modular.py  risk.py  source_aware.py  suppression.py  verifier.py
tool-research/Hunter_2/reports/: __init__.py  (+5 more)
(+577 files in other folders)
